--- a/video_player_android/pubspec.yaml
+++ b/video_player_android/pubspec.yaml
@@ -20,6 +20,9 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
+  video_player_platform_interface: ">=6.1.0 <7.0.0"
+
+dependency_overrides:
   video_player_platform_interface:
     path: ../video_player_platform_interface
 
