--- a/video_player/pubspec.yaml
+++ b/video_player/pubspec.yaml
@@ -24,18 +24,27 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  html: ^0.15.4
-  video_player_android:
-    path: ../video_player_android
-  video_player_avfoundation: ^2.5.3
-  video_player_platform_interface:
-    path: ../video_player_platform_interface
-  meta: ^1.11.0
-  video_player_web: ^2.1.2
+  html: ^0.15.0
+  video_player_android: ^2.3.5
+  video_player_avfoundation: ^2.5.0
+  video_player_platform_interface: ^3.0.0
+  meta: ^1.3.0
 
- 
+  # The design on https://flutter.dev/go/federated-plugins was to leave
+  # this constraint as "any". We cannot do it right now as it fails pub publish
+  # validation, so we set a ^ constraint. The exact value doesn't matter since
+  # the constraints on the interface pins it.
+  # TODO(amirh): Revisit this (either update this part in the design or the pub tool).
+  # https://github.com/flutter/flutter/issues/46264
+  video_player_web: ^2.0.0
+
+
 
 dependency_overrides:
+  video_player_android:
+    path: ../video_player_android
+  video_player_platform_interface:
+    path: ../video_player_platform_interface
   video_player_web:
     path: ../video_player_web
 
