--- a/video_player/example/android/app/src/main/AndroidManifest.xml
+++ b/video_player/example/android/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
   <application
     android:icon="@mipmap/ic_launcher"
     android:label="video_player_example"
-    android:networkSecurityConfig="@xml/network_security_config">
+      android:usesCleartextTraffic="true"
+    >
     <activity
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection"
       android:hardwareAccelerated="true"
       android:name="io.flutter.embedding.android.FlutterActivity"
       android:theme="@style/LaunchTheme"
+
       android:windowSoftInputMode="adjustResize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
