--- a/video_player/example/ios/Flutter/Generated.xcconfig
+++ b/video_player/example/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=E:\flutter\flutter
-FLUTTER_APPLICATION_PATH=E:\Sourcaya\Apps\packages\packages\video_player\video_player\example
+FLUTTER_APPLICATION_PATH=E:\Sourcaya\Apps\video_player\video_player\example
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
