--- a/video_player_platform_interface/pubspec.yaml
+++ b/video_player_platform_interface/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.3.0
+  plugin_platform_interface: ^2.1.7
   flutter_test:
     sdk: flutter
 
