--- a/video_player_android/android/build.gradle
+++ b/video_player_android/android/build.gradle
@@ -33,9 +33,9 @@ android {
     if (project.android.hasProperty("namespace")) {
         namespace 'io.flutter.plugins.videoplayer'
     }
-    compileSdkVersion 33
 
     defaultConfig {
+        compileSdk 34
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -50,12 +50,12 @@ android {
     }
 
     dependencies {
-        def exoplayer_version = "2.18.7"
-        implementation "com.google.android.exoplayer:exoplayer-core:${exoplayer_version}"
-        implementation "com.google.android.exoplayer:exoplayer-hls:${exoplayer_version}"
-        implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayer_version}"
-        implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoplayer_version}"
-        implementation "com.google.android.exoplayer:exoplayer-rtsp:${exoplayer_version}"
+        def exoplayer_version = "1.2.1"
+        implementation "androidx.media3:media3-exoplayer:${exoplayer_version}"
+        implementation "androidx.media3:media3-exoplayer-hls:${exoplayer_version}"
+        implementation "androidx.media3:media3-exoplayer-dash:${exoplayer_version}"
+        implementation "androidx.media3:media3-exoplayer-smoothstreaming:${exoplayer_version}"
+        implementation "androidx.media3:media3-exoplayer-rtsp:${exoplayer_version}"
 
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'androidx.test:core:1.3.0'
