--- a/video_player_android/example/android/app/build.gradle
+++ b/video_player_android/example/android/app/build.gradle
@@ -36,7 +36,8 @@ android {
     defaultConfig {
         applicationId "io.flutter.plugins.videoplayerexample"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
+        compileSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
