--- a/video_player_android/example/pubspec.yaml
+++ b/video_player_android/example/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
 dependency_overrides:
   video_player_platform_interface:
     git:
-      url: https://github.com/basemosama/packages.git
-      path: packages/video_player/video_player_platform_interface
+      url: https://github.com/sourcya/video_player.git
+      path: video_player_platform_interface
 
 
 
