--- a/video_player_android/android/build.gradle
+++ b/video_player_android/android/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url = uri("https://jitpack.io") }
+
 
     }
 
@@ -18,6 +20,8 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url = uri("https://jitpack.io") }
+
 
     }
 }
@@ -38,6 +42,9 @@ android {
         compileSdk 34
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
+
     }
     lintOptions {
         checkAllWarnings true
@@ -56,6 +63,10 @@ android {
         implementation "androidx.media3:media3-exoplayer-dash:${exoplayer_version}"
         implementation "androidx.media3:media3-exoplayer-smoothstreaming:${exoplayer_version}"
         implementation "androidx.media3:media3-exoplayer-rtsp:${exoplayer_version}"
+        // To add media3 software decoders and extensions
+        implementation "com.github.anilbeesetti.nextlib:nextlib-media3ext:0.6.0"
+        implementation 'com.android.support:multidex:2.0.1' //enter the latest multidex version
+
 
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'androidx.test:core:1.3.0'
